# mine-ai-agent-service

./: .gitignore  LICENSE  README.md  README.pt.md  pyproject.toml
mine_ai_agent_service/: config.py  main.py
mine_ai_agent_service/agents/: __init__.py  base.py  events.py
mine_ai_agent_service/agents/executor/: __init__.py  agent.py
mine_ai_agent_service/agents/graph_builder/: __init__.py  builder.py
mine_ai_agent_service/agents/mcp/: __init__.py  callbacks.py  events.py  loader.py  mcp_tool_agent.py
mine_ai_agent_service/agents/planner/: __init__.py  agent.py
mine_ai_agent_service/agents/specialized/: __init__.py  output_formatter.py  python_coder.py
mine_ai_agent_service/api/: exception_handlers.py  router.py
mine_ai_agent_service/api/dependencies/: auth.py
mine_ai_agent_service/api/routers/: chat.py
mine_ai_agent_service/core/: authorization.py  session.py
mine_ai_agent_service/exceptions/: application.py
mine_ai_agent_service/llm/: base.py  claude_provider.py  factory.py  lmstudio_provider.py  openai_provider.py
mine_ai_agent_service/mcp/: __init__.py  base.py  mcp_client.py  mcp_sse_client.py  mcp_streamable_http_client.py
mine_ai_agent_service/registry/: agent_registry.py  embedder.py
mine_ai_agent_service/registry/store/: base.py  faiss_store.py
mine_ai_agent_service/services/: agent_service.py
