[project]
name = "mine-ai-agent-service"
version = "0.1.0"
description = ""
authors = [
    {name = "elsonjunio",email = "elsonjuniog@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "langgraph (>=1.1.2,<2.0.0)",
    "langchain-openai (>=1.1.11,<2.0.0)",
    "langchain-mcp-adapters (>=0.2.1,<0.3.0)",
    "faiss-cpu (==1.11.0.post1)",
    "mcp[cli] (>=1.26.0,<2.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "fastembed (>=0.7.4,<0.8.0)",
    "langchain-anthropic (>=1.4.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "blue (>=0.9.1,<0.10.0)"
]
